# bruh-its-an-acronym

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
src/: config.h  main.c  template_functions.c  template_functions.h  tests.c
